# text_readability_scorer

./: .gitignore  README.md  pyproject.toml
src/scorer/: analyzer.py  document_reader.py  main.py  metrics.py  report.py  simplifier.py
texts/: easy.txt  hard.txt  medium.txt
