[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "text_readability_scorer"
version = "0.1.0"
description = "Анализатор читаемости текста на основе лингвистических метрик."
authors = ["elena <eiermal@edu.hse.ru>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "scorer", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.9"
nltk = "^3.8"
textstat = "^0.7"

[tool.poetry.group.dev.dependencies]
black = "^23.1"
flake8 = "^6.0"
mypy = "^1.5"

[tool.poetry.scripts]
analyze-complexity = "scorer.main:main"